2012-10-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* X3DUserInterface.cpp:
	* info.wrl:
	* info.svg:
	* Configuration.cpp:
	* info.png:
	* X3DBrowserUserInterface.cpp: 

2012-10-26  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserWindow.h:
	* Configuration.h:
	* X3DBrowserWindow .cpp:
	* Configuration.cpp:
	* X3DBrowserWindowUI.h:
	* X3DBrowserWindowUI.cpp: 

2012-10-26  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* test-titania.sh:
	* main.cpp:
	* Image.h:
	* Image.h:
	* Console.ui:
	* config.h:
	* BrowserWidget.h:
	* History.h:
	* Node.png:
	* BrowserWindow.h:
	* X3DUserInterface.h:
	* none.png:
	* X3DBaseInterface.h:
	* Proto.png:
	* config.cpp:
	* X3DBaseInterface.cpp:
	* MFBool.png:
	* Fields.xcf:
	* History.cpp:
	* X3DUserInterface.cpp:
	* BrowserWidget.cpp:
	* BrowserWindow.cpp:
	* MFTime.png:
	* MFNode.png:
	* config.h:
	* SFTime.png:
	* SFNode.png:
	* SFBool.png:
	* MFInt32.png:
	* MFImage.png:
	* SFVec4f.png:
	* SFVec3f.png:
	* SFVec4d.png:
	* play.png:
	* stop.png:
	* X3DBaseInterface.h:
	* MFColor.png:
	* hand.png:
	* icon.svg:
	* MFFloat.png:
	* SFVec3d.png:
	* MFVec4f.png:
	* MFVec4d.png:
	* MFVec3f.png:
	* SFColor.png:
	* SFFloat.png:
	* SFImage.png:
	* SFInt32.png:
	* SFVec2d.png:
	* SFVec2f.png:
	* MFVec3d.png:
	* MFVec2f.png:
	* MFVec2d.png:
	* History.h:
	* X3DBrowserWindow.h:
	* X3DBrowserWidget.h:
	* BrowserWindow.h:
	* puck.desktop:
	* X3DUserInterface.h:
	* BrowserWidget.h:
	* X3DBrowserInterface.h:
	* MFString.png:
	* config.cpp:
	* ViewpointMenuItem.h:
	* MFDouble.png:
	* SFDouble.png:
	* SFString.png:
	* Console.ui:
	* arrow.png:
	* none.png:
	* Node.png:
	* BrowserWindow.cpp:
	* History.cpp:
	* X3DBaseInterface.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserInterface.cpp:
	* OutlineEditor.ui:
	* X3DUserInterface.cpp:
	* BrowserWidget.cpp:
	* HistoryEditor.ui:
	* BrowserWidget.ui:
	* BrowserWindow.ui:
	* X3DBrowserWidget.h: