@@ -97,11 +97,6 @@ protected:
 	void
 	update (const Cairo::RefPtr <Cairo::Context> &) = 0;
 
-	virtual
-	void
-	dispose ()
-	{ }
-
 
 private:
 
@@ -116,10 +111,6 @@ private:
 
 	bool
 	set_draw (const Cairo::RefPtr <Cairo::Context> &);
-
-	virtual
-	void
-	on_unrealize ();
 
 	sigc::connection initialized_connection;
 
