@@ -1,3 +1,8 @@
+2012-10-28  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* GLSurface.h:
+	* GLSurface.cpp: 
+
 2012-10-27  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* GLSurface.h:
