@@ -1,3 +1,9 @@
+2012-10-28  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DBrowser.o:
+	* Surface.h:
+	* Surface.cpp: 
+
 2012-10-27  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Surface.h:
