@@ -1,3 +1,14 @@
+2012-10-28  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp:
+	* BrowserWindow.ui:
+	* X3DBrowserWindow.h:
+	* X3DBrowserWidget.h:
+	* X3DBrowserInterface.h:
+	* X3DBrowserWidget.cpp:
+	* X3DBrowserWindow .cpp:
+	* X3DBrowserUserInterface.cpp: 
+
 2012-10-27  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DUserInterface.h:
